<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Av_Reg.fragment_authorization">

    <!-- Логотип -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/eng"
        android:contentDescription="Logo" />

    <!-- Поле для ввода Email -->
    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:hint="@string/ET_mail"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:textColor="#333333"
        android:backgroundTint="@android:color/darker_gray"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:drawableStart="@drawable/ic_email"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:drawablePadding="16dp"
        android:background="@drawable/rounded_edittext_bg"/>

    <!-- Поле для ввода Пароля -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:hint="@string/ET_pass"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="#333333"
        android:backgroundTint="@android:color/darker_gray"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:drawableStart="@drawable/ic_lock"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginHorizontal="32dp"
        android:drawablePadding="16dp"
        android:background="@drawable/rounded_edittext_bg"/>

    <!-- Кнопка входа -->
    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/B_open"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_rounded"
        app:layout_constraintBottom_toTopOf="@+id/textViewReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints" />



    <!-- Текст для перехода к регистрации -->
    <TextView
        android:id="@+id/textViewReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/B_reg"
        android:textColor="#808080"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewForgetPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Текст для восстановления пароля -->
    <TextView
        android:id="@+id/textViewForgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/TV_forget_pass"
        android:textColor="#808080"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="© 2024 LearningEnglish"
        android:textSize="14sp"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="6dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
